2006-07-19  Roger Leigh  <rleigh@debian.org>

	* debian/changelog: Close #378469.

2006-07-19  Roger Leigh  <rleigh@debian.org>

	* NEWS: Document terminal state save and restore behaviour.

	* sbuild/sbuild-session.cc
	(save_termios): New method.  Save terminal state.
	(restore_termios): New method.  Restore terminal state.
	(run_impl): Save and restore terminal state between opening and
	closing the session.

	* sbuild/sbuild-session.h: Add saved_termios and termios_ok
	members.

	* schroot/schroot-base-main.cc (run): Remove termios save and
	restore.

2006-07-19  Roger Leigh  <rleigh@debian.org>

	* po/LINGUAS: Remove vi.

	* po/vi.po: Remove currently unmaintained translation.

	* po/en_GB.po: Update

	* Add translation comments documenting all format string arguments
	before all translatable strings with %n% format modifers.

2006-07-18  Luk Claes  <luk@debian.org>

	* po/sv.po: Update Swedish translation.

2006-07-17  Roger Leigh  <rleigh@debian.org>

	* dchroot/dchroot.1.in, dchroot-dsa/dchroot-dsa.1.in: Remove
	accidentally committed SVN conflict markers.

2006-07-17  Roger Leigh  <rleigh@debian.org>

	* sbuild/sbuild-auth-conv-tty.cc
	(get_delay): Fix incorrectly named function call.

2006-07-17  Roger Leigh  <rleigh@debian.org>

	* TODO: Remove completed item.

	* po/en_GB.po: Update translation.

2006-07-17  Roger Leigh  <rleigh@debian.org>

	* Use log_exception_error and log_exception_error in place of
	log_error and log_warning.

2006-07-17  Roger Leigh  <rleigh@debian.org>

	* NEWS: Document stricter duplicate checking, and improved error
	reporting.

	* dchroot/dchroot-chroot-config.cc,
	dchroot-dsa/dchroot-dsa-chroot-config.cc: Duplicate chroot names
	are treated as an error.

	* sbuild/sbuild-keyfile.h: Use log_exception_warning in place of
	log_warning.
	(operator >>): Duplicate groups and keys within groups are an
	error.

	* dchroot/dchroot-session-base.cc
	(run_impl): Use arguments with USER_SWITCH.
